# fks_main

./: .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlint.json  100_PERCENT_OPERATIONAL.md  BROWSER_TEST_START.sh  CI_CD_STATUS.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile  FILE_MAPPING.json  Makefile  PORT_LAYOUT.md  QUICKREF.md  QUICK_SPLIT_COMMANDS.md  README.md  REPO_STATUS.md  RUN_SH_REVIEW.md  SPLIT_COMPLETE.md  SPLIT_READY.md  TAILSCALE_AUTH.md  auth-tailscale.sh  build-all.sh  check-k8s-status.sh  commit-all-repos.sh  docker-compose.gpu.yml  docker-compose.yml  docs-build-workflow.yml  fix-k8s-services.sh  manage.py  metrics.json  mkdocs.yml  pytest.ini  requirements.dev.txt  requirements.gpu.txt  requirements.root.txt  requirements.txt  ruff.toml  (+7 more)
.github/: GITHUB_ACTIONS_REVIEW.md  ISSUE_TEMPLATE.md  PLAN.backup.md  PLAN.md  README.md  SECRETS_SETUP.md  WEEKLY_REVIEW_TEMPLATE.md  labeler.yml
config/: CENTRAL_CONFIG_GUIDE.md  CONFIG_REVIEW-2025-01-15.md  IMPLEMENTATION_GUIDE.md  LOCATION.md  MOVED.md  QUICK_START.md  README-UPDATE.md  README.md  SERVICES_CONFIG.md  SERVICE_CONFIG_TEMPLATE.yaml  SUMMARY.md  caching.json  circuit_breakers.json  fks-config-base.yaml  fks-config-schema.json  incident_management.json  oncall.json  performance_benchmarks.json  service_registry.json  slos.json  test_config.py  toil_tracking.json  tracing.yaml
config/rust/: Cargo.toml
config/rust/src/: error.rs  lib.rs
docker/: DOCKER_BUILD_SYSTEM.md  Dockerfile  Dockerfile.ai  Dockerfile.analyze  Dockerfile.api  Dockerfile.app  Dockerfile.auth  Dockerfile.data  Dockerfile.execution  Dockerfile.execution-python  Dockerfile.gpu  Dockerfile.main  Dockerfile.monitor  Dockerfile.ninja  Dockerfile.portfolio  Dockerfile.training  Dockerfile.web_ui  README.md  SUMMARY.md  build-all.sh  entrypoint.sh  test-builds.sh
docs/: 503_FIX_COMPLETE.md  ACCOMPLISHMENT-REPORT.md  ADVANCED-RAG-COMPLETE.md  ADVANCED-RAG-STATUS.md  AI_ARCHITECTURE.md  AI_CHECKLIST.md  AI_SENTIMENT_INTEGRATION.md  AI_STRATEGY_INTEGRATION.md  ALL-WORK-COMPLETE.md  ALL_PHASES_SUMMARY.md  (+217 more)
(+680 files in other folders)
