[package]
name = "fks_main"
version = "1.0.0"
edition = "2021"
authors = ["nuniesmith"]
description = "FKS Main Orchestration Service - Rust API for K8s control and service management"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros", "multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }

# Configuration
config = "0.15.18"
dotenv = "0.15.0"

# Kubernetes client
k8s-openapi = { version = "0.26.0", features = ["v1_30"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
kube-runtime = "2.0.1"

# TLS/Certificates
rustls = { version = "0.23.35", features = ["ring"] }
rustls-pemfile = "2.2.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Colored output
colored = "2.1"

# Async utilities
futures = "0.3.31"

# Prometheus metrics  
# Note: Using 0.9.0 as 0.5.1 is no longer available on crates.io
axum-prometheus = "0.9.0"
prometheus = "0.13.3"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Environment
env_logger = "0.11.8"

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "fks_main"
path = "src/main.rs"

[[bin]]
name = "test_main"
path = "src/test_main.rs"

